# smartgl

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/sfllhkhan95/smartgl/: AppWindow.cpp  AppWindow.h  ContentFit.h  SmartGLApp.cpp  SmartGLApp.h  globals.h  stdafx.cpp  stdafx.h
core/src/sfllhkhan95/smartgl/io/: Callbacks.cpp  Callbacks.h  KeyboardListener.cpp  KeyboardListener.h  MouseListener.cpp  MouseListener.h
core/src/sfllhkhan95/smartgl/ui/: Activity.cpp  Activity.h  ActivityManager.cpp  ActivityManager.h  Colors.h  Drawable.cpp  Drawable.h  Transformable.cpp  Transformable.h
core/src/sfllhkhan95/smartgl/ui/shape/: Circle.cpp  Circle.h  Line.cpp  Line.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  RoundedRectangle.cpp  RoundedRectangle.h  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
core/src/sfllhkhan95/smartgl/ui/view/: Animation.cpp  Animation.h  Button.cpp  Button.h  EditText.h  ImageView.cpp  ImageView.h  TextView.cpp  TextView.h  View.cpp  View.h
demo/: CMakeLists.txt
demo/src/sfllhkhan95/smartgl/demo/: demo.cpp
libs/: sglut.lib  soil.lib
libs/include/FTGL/: FTGLPixmapFont.h  ftgl.h
